# shadow_point_removal

./: CMakeLists.txt  shadow_removal.cpp  view.sh
